# UbuntuCloudImageFetcher

./: CMakeLists.txt  README.md  main.cpp
include/: ubuntu_cloud_image_fetcher.h  ubuntu_cloud_image_fetcher_impl.h
src/: CMakeLists.txt  ubuntu_cloud_image_fetcher_impl.cpp
